--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/shop/favicon.ico"><title>client</title><script defer="defer" src="/shop/js/chunk-vendors.d0822e6f.js"></script><script defer="defer" src="/shop/js/app.3bcc8526.js"></script><link href="/shop/css/chunk-vendors.f7d64127.css" rel="stylesheet"><link href="/shop/css/app.44bdf88b.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!doctype html>  
+<html lang="">  
+<head>  
+    <meta charset="utf-8">  
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">  
+    <meta name="viewport" content="width=device-width,initial-scale=1">  
+    <link rel="icon" href="./favicon.ico">  
+    <title>client</title>  
+    <script defer="defer" src="./js/chunk-vendors.d0822e6f.js"></script>  
+    <script defer="defer" src="./js/app.3bcc8526.js"></script>  
+    <link href="./css/chunk-vendors.f7d64127.css" rel="stylesheet">  
+    <link href="./css/app.44bdf88b.css" rel="stylesheet">  
+</head>  
+<body>  
+    <noscript>  
+        <strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>  
+    </noscript>  
+    <div id="app"></div>  
+</body>  
+</html>  
